# simple-plasma-toolkit

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-cloudrun.yml
examples/: heat_shield_tile.stl  run_starship_flip.sh  run_starship_flip_showcase.sh  run_starship_tile.sh  run_tile.sh
scripts/: deploy_cloudrun.sh
src/heatstl/: __init__.py  cli.py  diagnostics.py  flux.py  geometry.py  io.py  mesh.py  pipeline.py  presets.py  solver.py  transient.py
src/heatstl/service/: __init__.py  app.py  artifact_store.py
tests/: test_arrow.py  test_artifact_store.py  test_back_face.py  test_flux.py  test_geometry.py  test_radiation.py  test_service.py  test_shadow.py  test_solver_slab.py  test_transient.py
