[project]
name = "heatstl"
version = "0.1.0"
description = "Apply a prescribed heat flux to an STL and solve steady-state heat conduction."
readme = "README.md"
authors = [
    { name = "Mike Battye", email = "mbattye@me.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "trimesh>=4.0",
    "rtree>=1.2",
    "meshio>=5.3",
    "gmsh>=4.12",
    "scikit-fem>=9.0",
    "pyvista>=0.43",
    "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.6",
    "google-cloud-storage>=2.16",
]

[project.scripts]
heatstl = "heatstl.cli:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: integration tests that mesh and solve (run with `-m slow`)",
]
